<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Advanced</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>

    <string name="buttonAdd">+</string>
    <string name="buttonSubtract">-</string>
    <string name="buttonMultiply">x</string>
    <string name="buttonDivide">/</string>
    <string name="buttonEqual">=</string>
    <string name="buttonDot">.</string>
    <string name="buttonSin">sin</string>
    <string name="buttonCos">cos</string>
    <string name="buttonTan">tan</string>
    <string name="buttonImaginary">i</string>
    <string name="buttonLn">ln</string>
    <string name="buttonLog">log</string>
    <string name="buttonPi">π</string>
    <string name="buttonExp">e</string>
    <string name="buttonPercent">%</string>
    <string name="buttonFact">!</string>
    <string name="buttonSqrt">√</string>
    <string name="buttonSqr">^</string>
    <string name="buttonLeft">(</string>
    <string name="buttonRight">)</string>
    <string name="delete">Delete</string>
    <string name="title_activity_activity2">Advanced</string>
</resources>
