<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1.0"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.2">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:id="@+id/answer"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:editable="false"
            android:autoText="false"
            android:text="" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/delete"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:columnCount="4"
        android:useDefaultMargins="false"
        android:layout_weight="0.6">

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonSin"
            android:id="@+id/buttonSin"
            android:layout_row="2"
            android:layout_marginBottom="20dp"
            android:layout_column="0" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonCos"
            android:id="@+id/buttonCos"
            android:layout_marginStart="10dp"
            android:layout_row="2"
            android:layout_column="1" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonTan"
            android:id="@+id/buttonTan"
            android:layout_marginStart="10dp"
            android:layout_row="2"
            android:layout_column="2" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonImaginary"
            android:id="@+id/buttonImaginary"
            android:layout_row="2"
            android:layout_marginStart="10dp"
            android:layout_column="3" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonLn"
            android:id="@+id/buttonLn"
            android:layout_row="3"
            android:layout_marginBottom="20dp"
            android:layout_column="0" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonLog"
            android:id="@+id/buttonLog"
            android:layout_marginStart="10dp"
            android:layout_row="3"
            android:layout_column="1" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonPi"
            android:id="@+id/buttonPi"
            android:layout_marginStart="10dp"
            android:layout_row="3"
            android:layout_column="2" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonExp"
            android:id="@+id/buttonE"
            android:layout_row="3"
            android:layout_marginStart="10dp"
            android:layout_column="3" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonPercent"
            android:id="@+id/buttonPercent"
            android:layout_row="4"
            android:layout_marginBottom="20dp"
            android:layout_column="0" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonFact"
            android:id="@+id/buttonFact"
            android:layout_marginStart="10dp"
            android:layout_row="4"
            android:layout_column="1" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonSqrt"
            android:id="@+id/buttonSqrt"
            android:layout_marginStart="10dp"
            android:layout_row="4"
            android:layout_column="2" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonSqr"
            android:id="@+id/buttonExp"
            android:layout_row="4"
            android:layout_marginStart="10dp"
            android:layout_column="3" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonLeft"
            android:id="@+id/buttonLeft"
            android:layout_row="5"
            android:layout_column="0" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonRight"
            android:layout_marginStart="10dp"
            android:id="@+id/buttonRight"
            android:layout_row="5"
            android:layout_column="1" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_row="5"
            android:layout_column="2" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_marginStart="10dp"
            android:layout_column="3"/>

    </GridLayout>

</LinearLayout>
